# particles_simulation

./: .gitignore  .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: ci.yml
particles_simulation/: __main__.py  arcade_renderer.py  base.py  cli.py  integrator.py  system.py
particles_simulation/tests/: test_system.py
src/particles_simulation/: __init__.py  __main__.py  arcade_renderer.py  cli.py  integrator.py  system.py
src/particles_simulation/tests/: test_arcade_renderer.py  test_cli.py  test_integrator.py  test_system.py
tests/: test_base.py  test_cli.py  test_integrator.py
