[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "particles_simulation"
version = "0.1.0"
description = "A lightweight particle simulation library with an interactive Arcade renderer"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "f-oliva"}]
license = {text = "MIT"}
keywords = [
    "python",
    "scientific-computing",
    "simulation",
    "physics",
    "numerical-methods",
    "scientific-software",
    "particle-simulation",
]
dependencies = [
    "numpy>=1.20",
    "arcade>=2.6",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "ruff>=0.1.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/f-oliva/particles_simulation"
Repository = "https://github.com/f-oliva/particles_simulation"

[project.scripts]
particles_simulation = "particles_simulation.__main__:main"
particles-sim = "particles_simulation.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
particles_simulation = ["VERSION", "py.typed"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/particles_simulation/tests"]
addopts = "-v --cov=particles_simulation --cov-report=term"

[tool.coverage.run]
source = ["particles_simulation"]
